# DALIGNER

./: .gitignore  .testeA.bps  .testeA.idx  .testeB.bps  .testeB.idx  CMakeLists.txt  daligner.c  filter.c  filter.h  test.kbn  testeA.db  testeB.db
